Fix select overflow, autofill tint

--- a/packages/client/all-pages/main.css
+++ b/packages/client/all-pages/main.css
@@ -3,7 +3,12 @@
 @tailwind utilities;
 
 :root {
-  color-scheme: light dark;
+  color-scheme: light;
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+  }
 }
 
 @layer components {
